<resources>
    <string name="app_name">AndroidLabs1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="GUI">Look at my GUI</string>
    <string name="Click">Click here</string>
    <string name="Check">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="Type">Type here</string>
    <string name="flag">Canadian flag</string>
    <string name="toast_message">Here is more information</string>
    <string name="Lab3t1">Enter your email address:</string>
    <string name="Lab3e1">Type email here</string>
    <string name="Lab3t2">Type your password:</string>
    <string name="Lab3b1">LOGIN</string>
    <string name="Lab3te1">Your profile</string>
    <string name="Lab3te2">Your name:</string>
    <string name="Lab3ed1">Enter you name</string>
    <string name="Lab3te3">Your email:</string>
    <string name="Lab3ed2">Enter you email</string>
    <string name="Lab3te4">Your picture:</string>
    <string name="Lab3te5">Click the button above to take a picture:</string>
    <string name="Lab4chat">Go to chat</string>
    <string name="Lab4send">SEND</string>
    <string name="Lab4rev">RECEIVE</string>
    <string name="Lab4type">Type here</string>
    <string name="delete">Do you want to delete this?</string>
    <string name="select">The selected row is:</string>
    <string name="db">The database id:</string>
    <string name="y">Yes</string>
    <string name="n">No</string>
    <string name="Lab6button">Check weather</string>
    <string name="Lab6te1">Current Temperature: </string>
    <string name="Lab6te2">Min Temperature: </string>
    <string name="Lab6te3">Max Temperature: </string>
    <string name="Lab6te4">UV rating: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="here">Message Here</string>
    <string name="id">ID=</string>
    <string name="isSend">Is a Send Message</string>
    <string name="hide">HIDE</string>
    <string name="toolbar">Go to Toolbar Page</string>
    <string name="icon1">translate</string>
    <string name="icon2">photo</string>
    <string name="icon3">search</string>

    <string name="item1">Chat Page</string>
    <string name="item2">Weather Forecast</string>
    <string name="item3">Go back to login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>
