<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/te1"
        android:text="@string/Lab3te1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/te2"
        android:text="@string/Lab3te2"

        />

    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lab3ed1"
        android:nextFocusDown="@id/ed2"
        android:nextFocusUp="@id/ed1"
        android:nextFocusRight="@id/te2"
        android:nextFocusLeft="@id/te3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/te3"
        android:text="@string/Lab3te3"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed2"
        android:hint="@string/Lab3ed2"
        android:nextFocusDown="@id/ib1"
        android:nextFocusUp="@id/ed1"
        android:nextFocusRight="@id/te3"
        android:nextFocusLeft="@id/te4"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/te4"
        android:text="@string/Lab3te4"
        />
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ib1"
        android:src="@android:drawable/picture_frame"
        android:nextFocusDown="@id/ch"
        android:nextFocusUp="@id/ed2"
        android:nextFocusRight="@id/te1"
        android:nextFocusLeft="@id/te2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/te5"
        android:text="@string/Lab3te5"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ch"
        android:text="@string/Lab4chat"
        android:nextFocusDown="@id/we"
        android:nextFocusUp="@id/ib1"
        android:nextFocusRight="@id/te1"
        android:nextFocusLeft="@id/te2"
     />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/we"
        android:text="@string/Lab6button"
        android:nextFocusDown="@id/ed1"
        android:nextFocusUp="@id/ch"
        android:nextFocusRight="@id/te1"
        android:nextFocusLeft="@id/te2"
        />

</LinearLayout >