<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:text="@string/Lab3t1"

    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1"
        android:hint="@string/Lab3e1"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/e1"
        android:nextFocusUp="@id/e2"
        android:nextFocusRight="@id/t1"
        android:nextFocusLeft="@id/t2"

    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t2"
        android:text="@string/Lab3t2"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e2"
        android:inputType="textPassword"
        android:nextFocusDown="@id/b1"
        android:nextFocusUp="@id/e1"
        android:nextFocusRight="@id/t1"
        android:nextFocusLeft="@id/t2"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b1"
        android:text="@string/Lab3b1"
        android:nextFocusDown="@id/e1"
        android:nextFocusUp="@id/e2"
        android:nextFocusRight="@id/t1"
        android:nextFocusLeft="@id/t2"
        />


</LinearLayout>