<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chatList"
        android:layout_above="@+id/sendButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:text="@string/Lab4send"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receiveButton"
        android:text="@string/Lab4rev"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:layout_toStartOf="@+id/receiveButton"
        android:layout_toEndOf="@+id/sendButton"
        android:layout_alignParentBottom="true"
        android:hint="@string/Lab4type"
        android:inputType="text"
        />

    </RelativeLayout>